cambio titulo view omeka

--- a/views/omeka.hbs
+++ b/views/omeka.hbs
@@ -1,4 +1,4 @@
-<h1>Ejemplo de coneccion a OMEKA</h1>
+<h1>Barberías Old School</h1>
 
 <!-- recorre todos los campos de los items para extraer el nombre -->
 {{#each item.element_texts}}
